--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -5,20 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="../static/index.css">
 
 </head>
 
 <body>
-    <html>
 
-    <head>
-        <title>Login And Register</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+
+
 
     <body>
+
         <div class="hero">
             <div class="form-box">
 
@@ -41,7 +40,6 @@
                     {{reg_form.username}}
                     {{reg_form.email}}
                     {{reg_form.password}}
-
                     {{ reg_form.submit() }}
                 </form>
             </div>
@@ -53,4 +51,4 @@
 
     </body>
 
-    </html>
+</html>
