--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -29,7 +29,7 @@
 
     <div class="content">
 
-        <img src="images/logo.png" class="logo" alt="hash.me">
+        <img src="images/logo.png" class="logo" alt="myreq.herokuapp.com">
 
         {% if session['username'] %}
         <h2>
@@ -43,7 +43,7 @@
         </h2>
         {% endif %}
 
-        <h1>hash.me</h1>
+        <h1>myreq</h1>
         <h2>Short url and also costemize</h2>
 
         <div class="arrow bounce">
