--- a/application/templates/child/user.html
+++ b/application/templates/child/user.html
@@ -97,7 +97,7 @@
 		    <td>{{i+1}}</td>
 		    
 		    <td style="width:20px;"><a href="{{list_urls[i][1]}}" target=_blank>{{list_urls[i][1]}}</a></td>
-		    <td><a href="http://localhost:5000/u/{{list_urls[i][0]}}" target=_blank >hash.me/u/{{list_urls[i][0]}}</a></td>
+		    <td><a href="https://myreq.herokuapp.com/u/{{list_urls[i][0]}}" target=_blank >myreq.herokuapp.com/u/{{list_urls[i][0]}}</a></td>
 		    
 		  </tr>
 		  {%endfor%}
