--- a/application/templates/child/login.html
+++ b/application/templates/child/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>hash.me | Log In</title>
+<title>myreq | Log In</title>
 <link rel="stylesheet" href="../static/styles.css">
 <style>
     body {
@@ -17,7 +17,7 @@
 {%block content %}
 
 <div class="hero">
-    <img src="images/logo.png" class="logo" alt="hash.me">
+    <img src="images/logo.png" class="logo" alt="myreq logo">
 
 
     <div class="form-box">
