--- a/application/templates/child/home.html
+++ b/application/templates/child/home.html
@@ -69,7 +69,7 @@
     
     {% if msg!="" %}
     <h3>
-        <a href="{{msg}}" target="_blank">
+        <a class="new-gen-link" href="{{msg}}" target="_blank">
             {{msg}}
         </a>
     </h3>
