--- a/application/static/index.css
+++ b/application/static/index.css
@@ -269,9 +269,11 @@ body {
 }
 
 a {
-    color: #999;
+    color: white;
     transition: 0.2s;
     text-decoration: none;
+    font-weight: 900;
+    
 
 }
 
