--- a/application/templates/child/user.html
+++ b/application/templates/child/user.html
@@ -64,7 +64,7 @@
 
 {% block content %}
 <span class="logo">
-    <img src="images/logo.png" alt="MyReq logo">
+    <img src="images/logo.png" alt="MyReq">
     {% if session.get('username') %}
     | <a href="{{url_for('logout')}}">Log out</a>
     {%else%}
