--- a/application/templates/child/login.html
+++ b/application/templates/child/login.html
@@ -17,7 +17,7 @@
 {%block content %}
 
 <div class="hero">
-    <img src="images/logo.png" class="logo" alt="myreq logo">
+    <img src="images/logo.png" class="logo" alt="MyReq">
 
 
     <div class="form-box">
