--- a/application/templates/child/home.html
+++ b/application/templates/child/home.html
@@ -26,7 +26,7 @@
 <div class="content">
 
     <span class="logo">
-        <img src="images/logo.png" alt="MyReq logo">
+        <img src="images/logo.png" alt="MyReq">
         {% if session.get('username') %}
         | <a href="{{url_for('logout')}}">Log out</a>
         {%else%}
