--- a/application/templates/child/user.html
+++ b/application/templates/child/user.html
@@ -89,7 +89,7 @@
 		  <tr>
 		    <th>No.</th>
 		    <th>Original URL</th>
-		    <th>Sorted URL</th>
+		    <th>Shorted URL</th>
 		    
 		  </tr>
 		  {% for i in range(0,list_urls | length)%}
